[red-only] Update test branch from master to redfs-main
The DDN repo has different main branch than the upstream
project.

--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -2,10 +2,10 @@ name: 'Build & Test'
 on:
   push:
     branches:
-      - master
+      - redfs-main
   pull_request:
     branches:
-      - master
+      - redfs-main
 
 permissions:
   contents: read
