Use major version numbers for actions.
Signed-off-by: Ashley Pittman <ashley@pittman.co.uk>

--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -7,8 +7,7 @@ on:
   pull_request:
     branches: [master]
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   codespell:
@@ -17,6 +16,6 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@9bb56186c3b09b4f86b1c65136769dd318469633 # v4.1.2
+        uses: actions/checkout@v4
       - name: Codespell
-        uses: codespell-project/actions-codespell@94259cd8be02ad2903ba34a22d9c13de21a74461 # v2.0
+        uses: codespell-project/actions-codespell@v2
