--- a/meson.build
+++ b/meson.build
@@ -126,6 +126,10 @@ private_cfg.set('HAVE_ICONV',
     cc.has_function('iconv', prefix: '#include <iconv.h>'))
 private_cfg.set('HAVE_BACKTRACE',
     cc.has_function('backtrace', prefix: '#include <execinfo.h>'))
+public_cfg.set('HAVE_STATX',
+        cc.has_function('statx',  prefix : '#define _GNU_SOURCE\n#include <sys/stat.h>'))
+private_cfg.set('HAVE_STATX',
+        cc.has_function('statx',  prefix : '#define _GNU_SOURCE\n#include <sys/stat.h>'))
 
 # Struct member checks
 private_cfg.set('HAVE_STRUCT_STAT_ST_ATIM',
