--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,9 +13,13 @@ name: "CodeQL Advanced"
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+      - '[0-9]+.[0-9]+'  # This will match branches like 3.17, 3.18, 4.0, etc.
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+      - '[0-9]+.[0-9]+'
 
 jobs:
   analyze:
