--- a/.github/workflows/codespell.yml
+++ b/.github/workflows/codespell.yml
@@ -24,3 +24,5 @@ jobs:
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
       - name: Codespell
         uses: codespell-project/actions-codespell@406322ec52dd7b488e48c1c4b82e2a8b3a1bf630 # v2.1
+        with:
+          skip: checkpatch.pl
