--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,6 @@
-project('libfuse3', ['c'], version: '3.17.0',
-        meson_version: '>= 0.51',
+project('libfuse3', ['c'],
+        version: '3.17.1-rc0',  # Version with RC suffix
+        meson_version: '>= 0.51.0',
         default_options: [
             'buildtype=debugoptimized',
             'c_std=gnu11',
@@ -11,10 +12,16 @@ project('libfuse3', ['c'], version: '3.17.0',
 # from integers, i.e. concatenating strings instead
 # of splitting a string, but 'project' needs to be
 # the first meson.build keyword...
-version_list = meson.project_version().split('.')
+
+# split version into base and rc
+version_parts = meson.project_version().split('-')
+base_version = version_parts[0]
+
+version_list = base_version.split('.')
 FUSE_MAJOR_VERSION = version_list[0]
 FUSE_MINOR_VERSION = version_list[1]
 FUSE_HOTFIX_VERSION = version_list[2]
+FUSE_RC_VERSION = version_parts.length() > 1 ? version_parts[1] : ''
 
 platform = host_machine.system()
 if platform == 'darwin'
@@ -29,12 +36,6 @@ endif
 cc = meson.get_compiler('c')
 
 #
-# Feature detection, only available at libfuse compilation time,
-# but not for application linking to libfuse.
-#
-private_cfg = configuration_data()
-
-#
 # Feature detection, the resulting config file is installed
 # with the package.
 # Note: Symbols need to be care fully named, to avoid conflicts
@@ -46,6 +47,7 @@ public_cfg = configuration_data()
 public_cfg.set('FUSE_MAJOR_VERSION', FUSE_MAJOR_VERSION)
 public_cfg.set('FUSE_MINOR_VERSION', FUSE_MINOR_VERSION)
 public_cfg.set('FUSE_HOTFIX_VERSION', FUSE_HOTFIX_VERSION)
+public_cfg.set('FUSE_RC_VERSION', FUSE_RC_VERSION)
 
 # Default includes when checking for presence of functions and
 # struct members
@@ -60,6 +62,11 @@ include_default = '''
 '''
 args_default = [ '-D_GNU_SOURCE' ]
 
+#
+# Feature detection, only available at libfuse compilation time,
+# but not for application linking to libfuse.
+#
+private_cfg = configuration_data()
 private_cfg.set_quoted('PACKAGE_VERSION', meson.project_version())
 
 # Test for presence of some functions
