Set checkpatch test for master only
This is for upstream patches only.

--- a/.github/workflows/checkpatch.yml
+++ b/.github/workflows/checkpatch.yml
@@ -3,6 +3,8 @@ name: Checkpatch
 on:
   pull_request:
     types: [opened, synchronize, reopened]
+  branches:
+    - master
 
 jobs:
   checkpatch:
