--- a/.github/workflows/checkpatch.yml
+++ b/.github/workflows/checkpatch.yml
@@ -1,8 +1,14 @@
 name: Checkpatch
 
 on:
+  push:
+    branches:
+      - master
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - master
+permissions:
+  contents: read
 
 jobs:
   checkpatch:
