--- a/.github/workflows/pr-ci.yml
+++ b/.github/workflows/pr-ci.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches:
       - master
-      - '[0-9]+.[0-9]+'  # This will match branches like 3.17, 3.18, 4.0, etc.
+      - 'fuse-[0-9]+.[0-9]+*'  # This will match branches like 3.17, 3.18, 4.0, etc.
   pull_request:
     branches:
       - master
-      - '[0-9]+.[0-9]+'
+      - 'fuse-[0-9]+.[0-9]+*'
 
 permissions:
   contents: read
