github checkpatch test: Fix for non pull requests
It should only run for pull requests. Indentation for the branch
to run on was also not right.

Signed-off-by: Bernd Schubert <bschubert@ddn.com>

--- a/.github/workflows/checkpatch.yml
+++ b/.github/workflows/checkpatch.yml
@@ -1,14 +1,10 @@
 name: Checkpatch
 
 on:
-  push:
-    branches:
-      - master
   pull_request:
+    types: [opened, synchronize, reopened]
     branches:
       - master
-permissions:
-  contents: read
 
 jobs:
   checkpatch:
@@ -23,6 +19,10 @@ jobs:
         sudo apt-get install -y perl
     - name: Run checkpatch.pl
       run: |
+        if [ -z "${{ github.base_ref }}" ]; then
+          echo "Not a pull request, skipping checkpatch"
+          exit 0
+        fi
         git fetch origin ${{ github.base_ref }}
         base_commit=$(git merge-base origin/${{ github.base_ref }} HEAD)
         echo "Base commit: $base_commit"
