--- a/.github/workflows/abicheck.yml
+++ b/.github/workflows/abicheck.yml
@@ -26,7 +26,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get -y install abigail-tools clang gcc
+          sudo apt-get -y install abigail-tools clang gcc liburing-dev libnuma-dev
 
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
