--- a/meson_options.txt
+++ b/meson_options.txt
@@ -24,3 +24,6 @@ option('disable-libc-symbol-version', type : 'boolean', value : false,
 
 option('enable-usdt', type : 'boolean', value : false,
        description: 'Enable user statically defined tracepoints for extra observability')
+
+option('enable-io-uring', type: 'boolean', value: true,
+       description: 'Enable fuse-over-io-uring support')
