fusermount: close_range seems to be available on bsd
According to https://man.freebsd.org/cgi/man.cgi?close_range(2)
we just need to remove the linux include.

Signed-off-by: Bernd Schubert <bernd@bsbernd.com>

--- a/meson.build
+++ b/meson.build
@@ -98,7 +98,9 @@ special_funcs = {
     'close_range': '''
         #include <unistd.h>
         #include <fcntl.h>
+        #ifdef linux
         #include <linux/close_range.h>
+        #endif
         int main(void) {
             unsigned int flags = CLOSE_RANGE_UNSHARE;
             return close_range(3, ~0U, flags);
