fusermount: count mounts with listmount and statmount
reading from /proc is not atomic. /etc/mtab specifically is only
atomic within a single read syscall, so it's possible to see
repeated or stale mounts reading it line by line. this can sometimes
cause fusermount to see the same mount hundreds or thousands of times
which results in spurious mount failures if fuse_mount_max is not set
high enough.

listmount and statmount were introduced as apis to work around the
limitations of parsing proc. fusermount now tries to use those
syscalls when available, and falls back to reading /etc/mtab if that
fails. these apis do not have libc wrappers yet.

Signed-off-by: Ben Linsay <blinsay@gmail.com>

--- a/meson.build
+++ b/meson.build
@@ -99,6 +99,25 @@ special_funcs = {
             unsigned int flags = CLOSE_RANGE_UNSHARE;
             return close_range(3, ~0U, flags);
         }
+    ''',
+    'listmount': '''
+	#include <syscall.h>
+	#include <linux/mount.h>
+	#include <unistd.h>
+	#include <stdint.h>
+
+	int main(int argc, char *argv[]) {
+	  struct mnt_id_req req = {
+	    .size = sizeof(struct mnt_id_req),
+		  .mnt_id = LSMT_ROOT,
+	  };
+	  uint64_t mnt_ids[1];
+
+	  int n = syscall(SYS_listmount, &req, &mnt_ids, 1, 0);
+	  if (n == -1) {
+	    return -1;
+	  }
+	}
     '''
 }
 
