--- a/.github/workflows/abicheck_prev_release.yml
+++ b/.github/workflows/abicheck_prev_release.yml
@@ -1,5 +1,5 @@
 ---
-name: 'libfuse ABI check'
+name: 'libfuse ABI check against previous major release'
 
 on:
   push:
@@ -31,11 +31,20 @@ jobs:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           path: current
+          fetch-depth: 0  # Fetch all history and tags
+
+      - name: Determine previous major release tag
+        id: prev_release
+        run: |
+          cd current
+          chmod +x .github/workflows/find_previous_release_tag.sh
+          PREV_TAG=$(.github/workflows/find_previous_release_tag.sh)
+          echo "prev_tag=$PREV_TAG" >> $GITHUB_OUTPUT
 
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           path: previous
-          ref: ${{ github.event.pull_request.base.ref }}
+          ref: ${{ steps.prev_release.outputs.prev_tag }}
 
       - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
         with:
@@ -51,7 +60,8 @@ jobs:
       - name: Build previous
         working-directory: previous
         run: |
-          echo "Commit-id before PR: $(git show HEAD)"
+          echo "Previous release tag: ${{ steps.prev_release.outputs.prev_tag }}"
+          echo "Commit-id of previous release: $(git show HEAD)"
           pip install -r requirements.txt
           meson setup build --buildtype=debug
           meson compile -C build
