--- a/test/meson.build
+++ b/test/meson.build
@@ -22,6 +22,9 @@ td += executable('test_want_conversion', 'test_want_conversion.c',
 td += executable('test_signals', 'test_signals.c',
                  dependencies: [ libfuse_dep, thread_dep ],
                  install: false)
+td += executable('test_timeout_thread', 'test_timeout_thread.c',
+                 dependencies: [ libfuse_dep, thread_dep ],
+                 install: false)
 td += executable('test_abi', 'test_abi.c',
                  dependencies: [ libfuse_dep ],
                  install: false)
